fix the too long height

--- a/flask_report/static/css/customer.css
+++ b/flask_report/static/css/customer.css
@@ -31,3 +31,9 @@ code {
 .mb0 {
     margin-bottom: 0 !important;
 }
+
+@media print {
+    body {
+        height: auto !important;
+    }	
+}
